[package]
name = "drip"
version = "0.1.0"
edition = "2021"
description = "cli for sending and recieve files over WiFi"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/zschaffer/drip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
color-eyre = "0.6.2"
ctrlc = "3.2.4"
serde = { version = "1.0.151", features = ["derive"] }
spinach = "2.1.0"
